siek tiek pataisymu

--- a/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/add_stovyklaviete.html
+++ b/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/add_stovyklaviete.html
@@ -1,4 +1,4 @@
-{% extends 'stovyklavietes_projektas/base.html' %}
+{% extends 'stovyklavietes/base.html' %}
 
 {% block content %}
 <h2>Pridėti stovyklavietę</h2>
