--- a/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/idex.html
+++ b/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/idex.html
@@ -1,4 +1,4 @@
-{% extends 'stovyklavietes_projektas/base.html' %}
+{% extends 'stovyklavietes/base.html' %}
 
 {% block content %}
 <h2>Top 5 stovyklavietės</h2>
