taupom darbeli kitai dienai

--- a/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/apie.html
+++ b/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/apie.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>o buvo taip, ir butent taip, bet ne kitaip.</title>
 </head>
 <body>
 
