--- a/stovyklavietes_projektas/templates/base.html
+++ b/stovyklavietes_projektas/templates/base.html
@@ -3,12 +3,36 @@
 <head>
     <title>Stovyklavimo Projektas</title>
     <style>
+        /* CSS stiliai kaip anksčiau */
         body {
-            background-color: #f5f5f5;
-            color: #333;
-            font-family: Arial, sans-serif;
+            position: relative;
             margin: 0;
             padding: 0;
+        }
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+        nav ul li {
+            float: left;
+        }
+        nav ul li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        nav ul li a:hover {
+            background-color: #ddd;
+            color: black;
         }
         #content {
             padding: 20px;
@@ -17,13 +41,21 @@
             text-align: center;
             background-color: #ddd;
             padding: 10px;
-            position: absolute;
+            position: fixed;
             bottom: 0;
             width: 100%;
         }
     </style>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="{% url 'index' %}">Pradžia</a></li>
+            <li><a href="{% url 'add_stovyklaviete' %}">Pridėti stovyklavietę</a></li>
+            <li><a href="{% url 'info' %}">Informacija</a></li>
+            <li><a href="{% url 'about' %}">Apie mus</a></li>
+        </ul>
+    </nav>
     <div id="content">
         {% block content %}
         {% endblock %}
