Visdar neveikia, bet paprastesnes klaidos liko

--- a/stovyklavietes_projektas/stovyklavietes/templates/base.html
+++ b/stovyklavietes_projektas/stovyklavietes/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+
     <title>Stovyklavimo Projektas</title>
     <style>
         /* CSS stiliai kaip anksčiau */
@@ -50,7 +52,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{% url 'index' %}">Pradžia</a></li>
+            <li><a href="{% url 'pagrindinis' %}">Pradžia</a></li>
             <li><a href="{% url 'add_stovyklaviete' %}">Pridėti stovyklavietę</a></li>
             <li><a href="{% url 'info' %}">Informacija</a></li>
             <li><a href="{% url 'about' %}">Apie mus</a></li>
