--- a/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/pagrindinis.html
+++ b/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/pagrindinis.html
@@ -2,7 +2,7 @@
 
 <nav>
     <ul>
-        <li><a href="{% url 'index' %}">Pradžia</a></li>
+        <li><a href="{% url 'pagrindinis' %}">Pradžia</a></li>
         <li><a href="{% url 'add_stovyklaviete' %}">Pridėti stovyklavietę</a></li>
         <li><a href="{% url 'info' %}">Informacija</a></li>
         <li><a href="{% url 'about' %}">Apie mus</a></li>
