--- a/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/info.html
+++ b/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/info.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{% url 'index' %}">Pradžia</a></li>
+            <li><a href="{% url 'pagrindinis' %}">Pradžia</a></li>
             <li><a href="{% url 'add_stovyklaviete' %}">Pridėti stovyklavietę</a></li>
             <li><a href="{% url 'info' %}">Informacija</a></li>
             <li><a href="{% url 'about' %}">Apie mus</a></li>
