dar siek tiek pataisymu ir vazuojam toliau

--- a/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/add_stovyklaviete.html
+++ b/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/add_stovyklaviete.html
@@ -19,15 +19,15 @@
   <input type="checkbox" name="privalumai" value="Laužavietė"> Laužavietė<br>
   <input type="checkbox" name="privalumai" value="Lieptas"> Lieptas<br>
   <input type="checkbox" name="privalumai" value="WC"> WC<br>
-  
+
   <label for="koordinates">Koordinatės:</label>
-  <input type="text" name="koordinates" required><br>
-  
+  <input type="text" id="koordinates" name="koordinates"><br>
+
   <label for="nuotrauka">Stovyklavietės nuotrauka:</label>
-  <input type="file" name="nuotrauka"><br>
-  
+  <input type="file" id="nuotrauka" name="nuotrauka"><br>
+
   <label for="papildoma_info">Papildoma informacija:</label><br>
-  <textarea name="papildoma_info" rows="4" cols="50"></textarea><br>
+  <textarea id="papildoma_info" name="papildoma_info"></textarea><br>
   
   <button type="submit">Pridėti</button>
 </form>
