siandien (2023-09-06) jau galutinis variantas. pridejau "search" mygtuka, bet jis neveikia. reiketu models.py faile panaikinti (blank=True???) tada lyg ir turetu suveikti "search"

--- a/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/info.html
+++ b/stovyklavietes_projektas/stovyklavietes/templates/stovyklavietes/info.html
@@ -21,10 +21,43 @@
     <div id="content">
         {% block content %}
         <h1>Informacija apie stovyklavimą</h1>
-        <h2>Kas daugiau nei informacija</h2>
-        <p>Nepamirškite paimti savo kompaso ir žemėlapio, kad lengviau susiorientuotumėte gamtoje.</p>
+        <p>    Palapinė: Ji suteiks jums pastogę nuo lietaus, vėjo ir gali būti svarbus šaltiems naktiems orams.
+
+    Miegmaišis: Užtikrins jums šiltą naktį. Pasirinkite tinkamą miegmaišį pagal oro sąlygas ir sezonus.
+
+    Čiužinys arba izoliacinis kilimėlis: Suteiks jums komfortą miegant ir padės išvengti šilumos praradimo į žemę.
+
+    Kempinginė viryklė ir puodas: Leis jums paruošti maistą lauke. Nepamirškite degalų ar kuro.
+
+    Vandens filtravimo sistema arba butelis su geriamu vandeniu.
+
+    Pirmosios pagalbos komplektas : Jei reikės pirmosios pagalbos dėl sužalojimų ar sumažinimo. Turi būti įvairių tvarstymo medžiagų, antiseptikų ir pirštinių.
+
+    Atsarginiai drabužiai: Įsitikinkite, kad turite pakankamai šiltų ir sausų drabužių, kad išvengtumėte šalčio ar drėgmės poveikio.
+
+    Baterijos, žibintuvas: Būtina turėti šviesos šaltinius, ypač jei planuojate stovyklauti tamsoje arba laukinėje gamtoje.
+
+    Nepamirškite paimti savo kompaso ir žemėlapio, kad lengviau susiorientuotumėte gamtoje
+        </p>
+
         <h2>Pirmausia stovyklavime</h2>
-        <p>Kai atvyksite į stovyklavietę, pasirūpinkite iškrovimo ir stovyklavimo įrankiais. Taip pat galite pasidomėti, ar reikia užsiregistruoti ar laikytis kitų procedūrų.</p>
+        <p>Atvykus stovyklauti, pirmiausia svarbu gerai pasiruošti ir elgtis atsakingai, kad būtų saugu ir malonu leisti laiką gamtoje. Štai keletas patarimų:
+
+    Pasirinkite tinkamą vietą: Rinkitės stovyklavietę atidžiai. Ieškokite oficialių stovyklaviečių arba kitų leidžiamų vietų. Pasitikrinkite vietos taisykles ir leidimus stovyklauti.
+
+    Planuokite: Turėkite aiškų planą, kiek laiko planuojate praleisti stovyklavieteje. Pasirūpinkite maistui, vandenui, ir pastoge (palapine) atsižvelgiant į sezoną.
+
+    Pasiruoškite įrangą: Patikrinkite, ar turite reikiamą įrangą, pvz. palapinė, miegmaišis, viryklė, ir visi kiti reikalingi daiktai.
+
+    Elkitės atsakingai aplinkos atžvilgiu: Įkurkite stovyklą pakankamu atstumu nuo upių, ežerų, ar kitų vandens telkinių, kad išvengtumėte potvynių. Nedarykite žalos gamtai, neplėšykite augalų, bei nežalokite gyvūnų.
+
+    Tvarkykite atliekas: Turėkite specialų maišelį atliekoms ir nešiokite su savimi. Neterškite gamtos, atliekas issivežkite su savimi.
+
+    Saugos sumetimais: Pasidalinkite savo kelionės planais su draugais ar šeima, kad jie žinotų jūsų buvimo vietą. Taip pat turėkite pirmosios pagalbos rinkinį, bei susipažinkite su jo panaudojimo galimybėmis.
+
+    Mėgaukitės gamta: Kai esate įsikūrę stovyklaviete, džiaukitės gamtos grožiu. Vaikščiokite, tyrinėkite, atsipalaiduokite ir pasinaudokite tuo, ką gamta gali pasiūlyti.
+
+Stovyklavimas gali būti ne tik nuostabi patirtis, bet ir atgaiva nuo kasdieninio gyvenimo tempo. Prisiminkite šiuos patarimus ir pasiruoškite, kad jūsų kelionė būtų saugi ir įsimintina.</p>
         <h2>Saugumas visada pirmas</h2>
         <p>Nepamirškite laikytis saugumo taisyklių stovyklavime. Kiekvieną kartą prieš išvykdami patikrinkite savo inventorių ir pasirūpinkite, kad būtumėte pasiruošę visiems galimiems iššūkiams.</p>
         {% endblock %}
